# weper

./: .gitignore  Cargo.toml  README.md
.cargo/: .config.toml
.github/workflows/: release.yml  sync-file.yml  test_release.yml
config/: Cargo.toml
config/src/: lib.rs
csv_config/: Cargo.toml
csv_config/src/: lib.rs
green/: Cargo.toml
green/src/: id_collections.rs  lib.rs
indeed/: Cargo.toml
indeed/src/: lib.rs
weper_cli/: Cargo.toml
weper_cli/src/: main.rs
weper_lib/: Cargo.toml
weper_lib/src/: google.rs  lib.rs
