[package]
name = "green"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
weper_lib = {path = "../weper_lib"}
config = {path = "../config"}
csv_config = {path = "../csv_config"}
tokio = {version="1.36", features=["full"]}
