[package]
name = "weper_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
weper_lib = { path = "../weper_lib" }
green = { path = "../green" }
config = { path = "../config" }
csv_config = { path = "../csv_config" }
tokio = {version="1.36", features=["full"]}
clap = {version="4.5.4", features = ["derive"]}
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
