[package]
name = "weper_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
"reqwest" = {version="0.12", features=["json"]}
"scraper" = "0.19.0"
headless_chrome = "1.0.10"
tokio = {version ="1.36", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
url = "2.5.0"


